fix for overflowing images

--- a/style.css
+++ b/style.css
@@ -71,6 +71,6 @@ a:hover {
 
 .post .post_image {
     display: block;
-    max-width: 750px;
+    max-width: 100%;
     margin: 20px 0 20px 0;
 }
